--- a/src/sisiliano.css
+++ b/src/sisiliano.css
@@ -51,3 +51,12 @@
     color: black;
     font-size: 4em;
 }
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
