--- a/src/sisiliano.css
+++ b/src/sisiliano.css
@@ -1,62 +1,122 @@
+@keyframes fade {
+  0% { opacity: 1; }
+  50% { opacity: 0.5; }
+  100% { opacity: 1; }
+} 
+
+@keyframes rotate {
+  0% {
+		-webkit-transform: rotateZ(0deg);
+		-moz-transform: rotateZ(0deg);
+		-ms-transform: rotateZ(0deg);
+		-o-transform: rotateZ(0deg);
+		transform: rotateZ(0deg);
+		
+		opacity: 1;
+  }
+	
+  50% {
+		stroke: black;
+		fill: black;
+		opacity: 0.5;
+  }
+	
+  100% {
+		-webkit-transform: rotateZ(450deg);
+		-moz-transform: rotateZ(450deg);
+		-ms-transform: rotateZ(450deg);
+		-o-transform: rotateZ(450deg);
+		transform: rotateZ(450deg);
+		
+		opacity: 1;
+  }
+}
 
 .sisiliano {
 	width: 100%;
-    height: 100%;
-}
+	height: 100%;
+	
+	.ctrl {
+		.ctrl-circle {
+			-webkit-transform-origin: 150px 150px;
+			-moz-transform-origin: 150px 150px;
+			-ms-transform-origin: 150px 150px;
+			-o-transform-origin: 150px 150px;
+			transform-origin: 150px 150px;
+			
+			-webkit-transform: rotateZ(90deg);
+			-moz-transform: rotateZ(90deg);
+			-ms-transform: rotateZ(90deg);
+			-o-transform: rotateZ(90deg);
+			transform: rotateZ(90deg);
+			
+			r: 130;
+			cx: 150;
+			cy: 150;
+			
+			&.ctrl-circle-background {
+				stroke: white;
+				stroke-opacity: 0.2;
+				stroke-width: 7;
+				stroke-dashoffset: 0px;
+				fill: white;
+				fill-opacity: 0;
+				
+				-webkit-filter: url('#filter6244');
+				-moz-filter: url('#filter6244');
+				-ms-filter: url('#filter6244');
+				-o-filter: url('#filter6244');
+				filter: url('#filter6244');
+			}
 
-.ctrl-circle {
-  position: relative;
-  display: inline-block;
-  transform: rotate(90deg);
-  transform-origin: 50% 50%;
-  fill: transparent;
-}
-
-.ringCtrl{
-	border-radius: 50%;
-    //box-shadow: 1px 1px 1px blue;
-	position: relative;
-}
-
-.ringCtrl:focus {
-	outline: none;
-    box-shadow: 1px 1px 20px 1px #A2A2A5;
-}
-
-.ctrl-circle-background {
-  stroke: green;
-  stroke-width: 29px;
-}
-
-.ctrl-circle-cover {
-  stroke: #DEDEDE;
-  stroke-width: 30px;
-}
-
-.ctrl-circle-center {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    box-shadow: inset 1px 1px 40px 1px #97979C;
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    display: inline-block;
-	text-align: center;
-}
-
-.ctrl-circle-value {
-	position: relative;
-    top: 35%;
-    color: black;
-    font-size: 4em;
+			&.ctrl-circle-cover {
+				stroke: #009688;
+				stroke-width: 7;
+				fill: white;
+				fill-opacity: 0;
+				
+				-webkit-filter: url('#filter6244');
+				-moz-filter: url('#filter6244');
+				-ms-filter: url('#filter6244');
+				-o-filter: url('#filter6244');
+				filter: url('#filter6244');
+			}
+		}
+			
+		.ctrl-circle-value {
+			font-family: inherit;
+			fill: #009688;
+			font-style: italic;
+			font-size: 80px;
+		}
+	}
+	
+	&:focus {
+		outline: none;
+		
+		.ctrl {
+			.ctrl-circle {
+				-webkit-filter: url('#filter6245');
+				-moz-filter: url('#filter6245');
+				-ms-filter: url('#filter6245');
+				-o-filter: url('#filter6245');
+				filter: url('#filter6245');
+				
+				fill-opacity: 0.15;
+			}
+			
+			.ctrl-circle-value {
+				fill: white !important;
+			}
+		}
+	}
 }
 
 .unselectable {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
