--- a/src/templates/piano.html
+++ b/src/templates/piano.html
@@ -1,4 +1,4 @@
-<div tabindex="0" class="sisiliano" role="slider" aria-label="Piano">
+<div tabindex="0" class="fl-sisiliano" role="slider" aria-label="Piano">
   <svg
     xmlns:osb="http://www.openswatchbook.org/uri/2009/osb"
     xmlns:dc="http://purl.org/dc/elements/1.1/"
@@ -7,285 +7,119 @@
     xmlns:svg="http://www.w3.org/2000/svg"
     xmlns="http://www.w3.org/2000/svg"
     xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-     width="100%"
-     height="100%"
-     viewBox="0 0 600 300">
-       <defs
-        id="defs4">
-        <filter
-           style="color-interpolation-filters:sRGB;"
-           id="filter6244">
-          <feFlood
-           flood-opacity="0.5"
-           flood-color="black"
-           result="flood"
-           id="feFlood6246" />
-          <feComposite
-           in="flood"
-           in2="SourceGraphic"
-           operator="in"
-           result="composite1"
-           id="feComposite6248" />
-          <feGaussianBlur
-           in="composite1"
-           stdDeviation="3"
-           result="blur"
-           id="feGaussianBlur6250" />
-          <feOffset
-           dx="0"
-           dy="1"
-           result="offset"
-           id="feOffset6252" />
-          <feComposite
-           in="SourceGraphic"
-           in2="offset"
-           operator="over"
-           result="composite2"
-           id="feComposite6254" />
-        </filter>
-        <filter
-           style="color-interpolation-filters:sRGB;"
-           id="filter6245">
-          <feFlood
-           flood-opacity="0.5"
-           flood-color="black"
-           result="flood"
-           id="feFlood6246" />
-          <feComposite
-           in="flood"
-           in2="SourceGraphic"
-           operator="in"
-           result="composite1"
-           id="feComposite6248" />
-          <feGaussianBlur
-           in="composite1"
-           stdDeviation="8"
-           result="blur"
-           id="feGaussianBlur6250" />
-          <feOffset
-           dx="-3"
-           dy="3.5"
-           result="offset"
-           id="feOffset6252" />
-          <feComposite
-           in="SourceGraphic"
-           in2="offset"
-           operator="over"
-           result="composite2"
-           id="feComposite6254" />
-        </filter>
-      </defs>
-       
-       <style>
-        .white-key {
-          width: 35;
-          opacity:1;
-          fill:#ffffff;
-          fill-opacity:1;
-          fill-rule:nonzero;
-          stroke:#ffffff;
-          filter: url('#filter6244');
-          transform-origin: 299 100;
-          transform-style: preserve-3d;
-          transform: rotatex(0deg);
-          stroke-linejoin: round;
-          stroke-width: 3;
-        }
-        
-        .black-key {
-          width: 27;
-          opacity:1;
-          fill:#000000;
-          fill-opacity:1;
-          fill-rule:nonzero;
-          stroke:#000000;
-          filter: url('#filter6244');
-          transform-origin: 299 100;
-          transform-style: preserve-3d;
-          transform: rotatex(0deg);
-          stroke-linejoin: round;
-          stroke-width: 3;
-        }
-        
-        .pressed{
-          transform: rotatex(10deg);
-          fill: #4CAF50;
-          stroke: #4CAF50;
-        }
-        .black-key:hover{
-          transform: rotatex(20deg);
-          fill: #4CAF50;
-          stroke: #4CAF50;
-        }
-        .white-key:hover {
-          transform: rotatex(10deg);
-          fill: #4CAF50;
-          stroke: #4CAF50;
-        }
-       </style>
+    class="fl-sisiliano-piano"
+    width="100%"
+    height="100%"
+    viewBox="0 0 {{viewBox.width}} {{viewBox.height}}" >
+    <defs
+      id="defs4">
+      <filter
+        style="color-interpolation-filters:sRGB;"
+        id="filter6244">
+        <feFlood
+          flood-opacity="0.5"
+          flood-color="black"
+          result="flood"
+          id="feFlood6246" />
+        <feComposite
+          in="flood"
+          in2="SourceGraphic"
+          operator="in"
+          result="composite1"
+          id="feComposite6248" />
+        <feGaussianBlur
+          in="composite1"
+          stdDeviation="3"
+          result="blur"
+          id="feGaussianBlur6250" />
+        <feOffset
+          dx="0"
+          dy="1"
+          result="offset"
+          id="feOffset6252" />
+        <feComposite
+          in="SourceGraphic"
+          in2="offset"
+          operator="over"
+          result="composite2"
+          id="feComposite6254" />
+      </filter>
+      <filter
+        style="color-interpolation-filters:sRGB;"
+        id="filter6245">
+        <feFlood
+          flood-opacity="0.5"
+          flood-color="black"
+          result="flood"
+          id="feFlood6246" />
+        <feComposite
+          in="flood"
+          in2="SourceGraphic"
+          operator="in"
+          result="composite1"
+          id="feComposite6248" />
+        <feGaussianBlur
+          in="composite1"
+          stdDeviation="8"
+          result="blur"
+          id="feGaussianBlur6250" />
+        <feOffset
+          dx="-3"
+          dy="3.5"
+          result="offset"
+          id="feOffset6252" />
+        <feComposite
+          in="SourceGraphic"
+          in2="offset"
+          operator="over"
+          result="composite2"
+          id="feComposite6254" />
+      </filter>
+    </defs>
+
+    <style>
+      /* These styles have been added seperately as a fix for firefox and IE */
+      .fl-sisiliano .fl-sisiliano-piano .fl-sisiliano-piano-white-key {
+        filter: url('#filter6244');
+      }
+      .fl-sisiliano .fl-sisiliano-piano .fl-sisiliano-piano-black-key {
+        filter: url('#filter6244');
+      }
+    </style>
+    <g style="display:inline">
+      {{#each keyBoard.whiteKeys}}
+      <rect
+        index="{{index}}"
+        class="fl-sisiliano-piano-key fl-sisiliano-piano-white-key"
+        height="150"
+        width="35"
+        x="{{x}}"
+        y="10" />
+      {{/each}}
+      {{#each keyBoard.blackKeys}}
+      <rect
+        index="{{index}}"
+        class="fl-sisiliano-piano-key fl-sisiliano-piano-black-key"
+        height="100"
+        width="27"
+        x="{{x}}"
+        y="10" />
+      {{/each}}
+    </g>
 
     <g style="display:inline">
       <rect
-         class="white-key"
-         id="rect6618"
-         height="150"
-         width="35"
-         x="0"
-         y="100" />
+        class="fl-sisiliano-piano-key fl-sisiliano-piano-disabledArea"
+        height="{{disabledArea.left.height}}"
+        width="{{disabledArea.left.width}}"
+        x="{{disabledArea.left.x}}"
+        y="{{disabledArea.left.y}}" />
       <rect
-         class="white-key pressed"
-         id="rect6618"
-         height="150"
-         width="35"
-         x="40"
-         y="100" />
-      <rect
-         class="white-key"
-         id="rect6618"
-         height="150"
-         width="35"
-         x="80"
-         y="100" />
-      <rect
-         class="white-key"
-         id="rect6618"
-         height="150"
-         width="35"
-         x="120"
-         y="100" />
-      <rect
-         class="white-key"
-         id="rect6618"
-         height="150"
-         width="35"
-         x="160"
-         y="100" />
-      <rect
-         class="white-key"
-         id="rect6618"
-         height="150"
-         width="35"
-         x="200"
-         y="100" />
-      <rect
-         class="white-key"
-         id="rect6618"
-         height="150"
-         width="35"
-         x="240"
-         y="100" />
-      <rect
-         class="white-key"
-         id="rect6618"
-         height="150"
-         width="35"
-         x="280"
-         y="100" />
-      <rect
-         class="white-key"
-         id="rect6618"
-         height="150"
-         width="35"
-         x="320"
-         y="100" />
-      <rect
-         class="white-key"
-         id="rect6618"
-         height="150"
-         width="35"
-         x="360"
-         y="100" />
-      <rect
-         class="white-key"
-         id="rect6618"
-         height="150"
-         width="35"
-         x="400"
-         y="100" />
-      <rect
-         class="white-key"
-         id="rect6618"
-         height="150"
-         width="35"
-         x="440"
-         y="100" />
-      <rect
-         class="white-key"
-         id="rect6618"
-         height="150"
-         width="35"
-         x="480"
-         y="100" />
-      <rect
-         class="white-key"
-         id="rect6618"
-         height="150"
-         width="35"
-         x="520"
-         y="100" />
-      <rect
-        class="black-key" 
-        id="rect6713"
-        height="100"
-        width="27"
-        x="24" 
-        y="100"/>
-      <rect
-        class="black-key" 
-        id="rect6713"
-        height="100"
-        width="27"
-        x="64" 
-        y="100"/>
-      <rect
-        class="black-key" 
-        id="rect6713"
-        height="100"
-        width="27"
-        x="144" 
-        y="100"/>
-      <rect
-        class="black-key" 
-        id="rect6713"
-        height="100"
-        width="27"
-        x="184" 
-        y="100"/>
-      <rect
-        class="black-key pressed" 
-        id="rect6713"
-        height="100"
-        width="27"
-        x="224" 
-        y="100"/>
-      <rect
-        class="black-key" 
-        id="rect6713"
-        height="100"
-        width="27"
-        x="304" 
-        y="100"/>
-      <rect
-        class="black-key" 
-        id="rect6713"
-        height="100"
-        width="27"
-        x="344" 
-        y="100"/>
-      <rect
-        class="black-key" 
-        id="rect6713"
-        height="100"
-        width="27"
-        x="424" 
-        y="100"/>
-      <rect
-        class="black-key" 
-        id="rect6713"
-        height="100"
-        width="27"
-        x="464" 
-        y="100"/>
+        class="fl-sisiliano-piano-key fl-sisiliano-piano-disabledArea"
+        height="{{disabledArea.right.height}}"
+        width="{{disabledArea.right.width}}"
+        x="{{disabledArea.right.x}}"
+        y="{{disabledArea.right.y}}" />
     </g>
   </svg>
 </div>
