Removed the additional pane which disabled the inactive keys
* Removed the additional pane which disabled the inactive keys
* Added an aditional style for inactive keys
* bug fix: some keys are keep on pressed after moving the active area

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -124,7 +124,7 @@
     fill: #4CAF50;
 
     .fl-sisiliano-piano-white-key {
-      width: 39px;
+      //width: 39px;
       opacity: 1;
       fill: #ffffff;
       fill-opacity: 1;
@@ -145,7 +145,7 @@
     }
 
     .fl-sisiliano-piano-black-key {
-      width: 27px;
+      //width: 27px;
       opacity:1;
       fill:#000000;
       fill-opacity:1;
@@ -169,7 +169,11 @@
       fill: rgba(0, 0, 0, 0.45);
     }
 
-    .fl-sisiliano-piano-key-pressed{
+    .fl-sisiliano-piano-key-inactive {
+      fill: #D1CFCF;
+    }
+
+    .fl-sisiliano-piano-key-pressed {
       transform: rotatex(10deg);
       fill: #4CAF50;
       stroke: #4CAF50;
