Integrated sounds to the piano

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -108,17 +108,8 @@
 .fl-sisiliano {
   &:focus {
     outline: none;
-
-    .ctrl {
-      .ctrl-circle {
-
-        fill-opacity: 0.15;
-      }
-
-      .ctrl-circle-value {
-        fill: white !important;
-      }
-    }
+    border-style: dashed;
+    border-width: 2px;
   }
   .fl-sisiliano-piano {
     fill: #4CAF50;
