--- a/src/main.less
+++ b/src/main.less
@@ -43,7 +43,7 @@
   height: 100%;
 
   .ctrl {
-    .ctrl-circle {
+    .knob-circle {
       -webkit-transform-origin: 150px 150px;
       -moz-transform-origin: 150px 150px;
       -ms-transform-origin: 150px 150px;
@@ -60,24 +60,31 @@
       cx: 150;
       cy: 150;
 
-      &.ctrl-circle-background {
+      &.knob-background-circle {
         stroke: white;
-        stroke-opacity: 0.2;
-        stroke-width: 7;
+        stroke-opacity: 0.4;
+        stroke-width: 10;
         stroke-dashoffset: 0px;
         fill: white;
         fill-opacity: 0;
       }
 
-      &.ctrl-circle-cover {
+      &.knob-value-circle {
         stroke: #009688;
         stroke-width: 20;
         fill: white;
         fill-opacity: 0;
       }
+
+      &.knob-border-circle {
+        r: 147;
+        fill: none;
+        stroke: none;
+        stroke-dasharray: 10px;
+      }
     }
 
-    .ctrl-circle-value {
+    .knob-value-text {
       font-family: inherit;
       fill: #009688;
       font-style: italic;
@@ -87,17 +94,20 @@
 
   &:focus {
     outline: none;
-    border: 2px solid black;
+    /*border: 2px solid black;
     border-style: dashed;
-    border-radius: 50%;
+    border-radius: 50%;*/
 
     .ctrl {
-      .ctrl-circle {
-
+      .knob-circle {
         fill-opacity: 0.15;
+
+        &.knob-border-circle {
+          stroke: black;
+        }
       }
 
-      .ctrl-circle-value {
+      .knob-value-text {
         fill: white !important;
       }
     }
