Changed the border style of the knob

--- a/src/main.less
+++ b/src/main.less
@@ -103,7 +103,8 @@
         fill-opacity: 0.15;
 
         &.knob-border-circle {
-          stroke: black;
+          stroke: #9E9E9E;
+          stroke-width: 2;
         }
       }
 
