Task-22: [Piano] accessibility implementation * added a guide * added an alert message to trigger when the tab is moved

--- a/src/main.less
+++ b/src/main.less
@@ -125,6 +125,10 @@
   .sisiliano-piano {
     fill: #4CAF50;
 
+    .sisiliano-piano-active-area-status {
+      fill: transparent;
+    }
+
     .sisiliano-piano-white-key {
       //width: 39px;
       opacity: 1;
