Task-38: [Linear Slider] Applying the initial design to the UI

--- a/src/main.less
+++ b/src/main.less
@@ -195,11 +195,18 @@
     .sisiliano-linear-slider-value-text {
       font-family: inherit;
       font-style: italic;
-      font-size: 30px;
+      //font-size: 30px;
     }
 
     .sisiliano-linear-slider-background-rect {
       fill-opacity: 0.4;
+    }
+
+    .sisiliano-linear-slider-value-circle {
+      &.sisiliano-linear-slider-value-circle-hover {
+        fill-opacity: 0.3;
+        display: none
+      }
     }
   }
 }
