[Linear Slider] Updated styles

--- a/src/main.less
+++ b/src/main.less
@@ -202,10 +202,16 @@
       fill-opacity: 0.4;
     }
 
-    .sisiliano-linear-slider-value-circle {
-      &.sisiliano-linear-slider-value-circle-hover {
+    .sisiliano-linear-slider-value-pointer {
+      &.sisiliano-linear-slider-value-pointer-hover {
         fill-opacity: 0.3;
         display: none
+      }
+    }
+
+    .sisiliano-linear-slider-ruler {
+      .sisiliano-linear-slider-ruler-value {
+        font-size: 10px;
       }
     }
   }
