bug-fix-#59: Added unselectable css style to the component's parent

--- a/src/main.less
+++ b/src/main.less
@@ -101,7 +101,8 @@
   }
 }
 
-.unselectable {
+.unselectable,
+.sisiliano {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
