[Knob] Added the border and changed the filters

--- a/src/main.less
+++ b/src/main.less
@@ -94,9 +94,9 @@
     outline: none;
 
     .sisiliano-border {
-      /*stroke: #9E9E9E;
+      stroke: #9E9E9E;
       stroke-width: 2;
-      filter: none;*/
+      filter: none;
     }
   }
 }
