--- a/src/main.less
+++ b/src/main.less
@@ -50,46 +50,6 @@
     filter: none;
   }
 
-  .sisiliano-knob {
-    .sisiliano-knob-circle {
-      cx: 150;
-      cy: 150;
-
-      &.sisiliano-knob-background-circle {
-        stroke: white;
-        stroke-opacity: 0.4;
-        stroke-width: 10;
-        stroke-dashoffset: 0px;
-        fill: white;
-        fill-opacity: 0;
-      }
-
-      &.sisiliano-knob-value-circle {
-        stroke: #009688;
-        stroke-width: 20;
-        fill: white;
-        fill-opacity: 0;
-      }
-    }
-
-    .sisiliano-knob-value-text {
-      font-family: inherit;
-      fill: #009688;
-      font-style: italic;
-      font-size: 80px;
-    }
-
-    &.sisiliano-active {
-      .sisiliano-knob-circle {
-        fill-opacity: 0.15;
-      }
-
-      .sisiliano-knob-value-text {
-        fill: white !important;
-      }
-    }
-  }
-
   &:focus {
     outline: none;
 
@@ -108,6 +68,20 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+.sisiliano {
+  .sisiliano-knob {
+    &.sisiliano-active {
+      .sisiliano-knob-circle {
+        fill-opacity: 0.15;
+      }
+
+      .sisiliano-knob-value-text {
+        fill: white !important;
+      }
+    }
+  }
 }
 
 .sisiliano {
