--- a/src/main.less
+++ b/src/main.less
@@ -42,6 +42,8 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
+  touch-action: none;
+  -ms-touch-action: none;
 
   .sisiliano-border {
     fill: none;
